[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game Back Grounds/BnWCityScape.png" type="Texture" id=1]
[ext_resource path="res://Game Back Grounds/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://How To Play.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Node" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="BnWCityScape" type="Sprite" parent="."]
position = Vector2( -70.1784, -68.3416 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = -8.09059
margin_top = 113.415
margin_right = 1021.91
margin_bottom = 487.415
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 68.0
margin_top = 176.0
margin_right = 962.0
margin_bottom = 198.0
custom_constants/separation = 30

[node name="Buttono" type="Button" parent="CenterContainer/HBoxContainer"]
margin_right = 124.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.0901961, 0.329412, 0.054902, 1 )
custom_colors/font_color_hover = Color( 0.14902, 0.443137, 0.133333, 1 )
text = "Level 1"
flat = true

[node name="Buttono2" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 278.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.498039, 0.584314, 0.0705882, 1 )
custom_colors/font_color = Color( 0.545098, 0.607843, 0.0941176, 1 )
custom_colors/font_color_hover = Color( 0.403922, 0.611765, 0.176471, 1 )
text = "Level 2"
flat = true

[node name="Buttono3" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 432.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.921569, 0.890196, 0.0627451, 1 )
custom_colors/font_color_hover = Color( 0.458824, 0.427451, 0.117647, 1 )
text = "Level 3"
flat = true

[node name="Buttono4" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 462.0
margin_right = 586.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.964706, 0.847059, 0.0588235, 1 )
custom_colors/font_color_hover = Color( 0.52549, 0.54902, 0.105882, 1 )
text = "Level 4"
flat = true

[node name="Buttono5" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 616.0
margin_right = 740.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.439216, 0.0784314, 1 )
custom_colors/font_color_hover = Color( 0.705882, 0.423529, 0.14902, 1 )
text = "Level 5"
flat = true

[node name="Buttono6" type="Button" parent="CenterContainer/HBoxContainer"]
margin_left = 770.0
margin_right = 894.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.968627, 0.0980392, 0.0980392, 1 )
custom_colors/font_color_hover = Color( 0.470588, 0.145098, 0.145098, 1 )
text = "Level 6"
flat = true

[node name="Button" type="Button" parent="."]
margin_left = 8.0
margin_top = 26.0
margin_right = 99.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.133333, 0.427451, 0.121569, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttono" to="." method="_on_Buttono_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttono2" to="." method="_on_Buttono2_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttono3" to="." method="_on_Buttono3_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttono4" to="." method="_on_Buttono4_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttono5" to="." method="_on_Buttono5_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/Buttono6" to="." method="_on_Buttono6_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
